Se aplican cambios para agregar Cloudinary

--- a/src/Api/SoftLine.Trebol.WebAPIRest/appsettings.json
+++ b/src/Api/SoftLine.Trebol.WebAPIRest/appsettings.json
@@ -9,6 +9,11 @@
     "DurationInMinutes": 6050000,
     "ExpireTime": "72:10:30"
   },
+  "CloudinarySettings": {
+    "CloudName": "daimm3piw",
+    "ApiKey": "954481324215269",
+    "ApiSecret": "e6Ev5qLyRAWsnl07k9D6wbrhJAM"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
