Se agrega otra cosa en el key

--- a/src/Api/SoftLine.Trebol.WebAPIRest/appsettings.json
+++ b/src/Api/SoftLine.Trebol.WebAPIRest/appsettings.json
@@ -14,6 +14,11 @@
     "ApiKey": "954481324215269",
     "ApiSecret": "e6Ev5qLyRAWsnl07k9D6wbrhJAM"
   },
+  "EmailSettings": {
+    "Email": "sixto.jose@gmail.com",
+    "Key": "YOUR_SENDGRID_API_KEY",
+    "BaseUrlClient": "http://localhost:3000"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
