Se cambiaron campos del mmodelo del puc y se hizo de nuevo la migracion

--- a/src/Api/SoftLine.Trebol.WebAPIRest/appsettings.json
+++ b/src/Api/SoftLine.Trebol.WebAPIRest/appsettings.json
@@ -7,7 +7,7 @@
         //Esteban
         //"ConnectionString": "Data Source=DESKTOP-IEOP1NV\\SQLEXPRESS; Initial Catalog=TrebolBD; Trusted_Connection=True; Min Pool Size=0; Max Pool Size=500; Pooling=true; Encrypt=False; TrustServerCertificate=True; MultipleActiveResultSets=True; Persist Security Info=True;"
         //Sara
-        "ConnectionString": "Server=DESKTOP-C58F532;Database=SistemaContable;Integrated Security=True; TrustServerCertificate=True;"
+        "ConnectionString": "Server=DESKTOP-C58F532;Database=Trebol;Integrated Security=True; TrustServerCertificate=True;"
 
     },
   "JwtSettings": {
