--- a/src/Api/SoftLine.Trebol.WebAPIRest/appsettings.json
+++ b/src/Api/SoftLine.Trebol.WebAPIRest/appsettings.json
@@ -3,9 +3,9 @@
     //Sixto
     //"ConnectionString": "Data Source=DESKTOP-IEOP1NV\\SQLEXPRESS; Initial Catalog=TrebolBD; Trusted_Connection=True; Min Pool Size=0; Max Pool Size=500; Pooling=true; Encrypt=False; TrustServerCertificate=True; MultipleActiveResultSets=True; Persist Security Info=True;"
     //Yerson
-    "ConnectionString": "Data Source=YERSON\\SQLEXPRESS;Initial Catalog=TrebolBD;User ID=sa;Password=Yersongil123*;TrustServerCertificate=true;",
+    //"ConnectionString": "Data Source=YERSON\\SQLEXPRESS;Initial Catalog=TrebolBD;User ID=sa;Password=Yersongil123*;TrustServerCertificate=true;",
     //Esteban
-    //"ConnectionString": "Data Source=DESKTOP-IEOP1NV\\SQLEXPRESS; Initial Catalog=TrebolBD; Trusted_Connection=True; Min Pool Size=0; Max Pool Size=500; Pooling=true; Encrypt=False; TrustServerCertificate=True; MultipleActiveResultSets=True; Persist Security Info=True;"
+    "ConnectionString": "Server=DESKTOP-12797JV\\SQLEXPRESS; Database=TrebolBD; User ID=sa; Password=Mortadela55*; Encrypt=False; TrustServerCertificate=True;"
     //Sara
     //"ConnectionString": "Data Source=DESKTOP-IEOP1NV\\SQLEXPRESS; Initial Catalog=TrebolBD; Trusted_Connection=True; Min Pool Size=0; Max Pool Size=500; Pooling=true; Encrypt=False; TrustServerCertificate=True; MultipleActiveResultSets=True; Persist Security Info=True;"
 
