Se creo todo el crud para el modelo puc y se creo el formulario en la vista

--- a/src/Presentation/SoftLine.Trebol.WebUI/SoftLine.Trebol.WebUI.csproj
+++ b/src/Presentation/SoftLine.Trebol.WebUI/SoftLine.Trebol.WebUI.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\SoftLine.Trebol.Application\SoftLine.Trebol.Application.csproj" />
+    <ProjectReference Include="..\..\Core\SoftLine.Trebol.Domain\SoftLine.Trebol.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
