se agrega crud de terceros y de puc

--- a/src/Presentation/SoftLine.Trebol.WebUI/appsettings.json
+++ b/src/Presentation/SoftLine.Trebol.WebUI/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiBaseAddress": "https://localhost:7051/api/" // o la dirección base de tu API
 }
