--- a/src/Presentation/SoftLine.Trebol.WebUI/SoftLine.Trebol.WebUI.csproj
+++ b/src/Presentation/SoftLine.Trebol.WebUI/SoftLine.Trebol.WebUI.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MatBlazor" Version="2.10.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\SoftLine.Trebol.Application\SoftLine.Trebol.Application.csproj" />
+  </ItemGroup>
+
 </Project>
